feat(client): implement BaseWebClient with generic fallback handling -Global Exception Handler
